# elevate

./: Cargo.toml  README.md  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240819004927_create_users_table.sql  20240820231003_create_games_table.sql
scripts/: init_db.sh
src/: app_state.rs  auth.rs  configuration.rs  lib.rs  main.rs  redis.rs  startup.rs
src/routes/: auth.rs  game.rs  mod.rs
tests/: auth_test.rs  common.rs  game_test.rs
