[package]
name = "elevate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "elevate"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
bb8 = "0.7.1"
bb8-redis = "0.14.0"
redis = "0.24.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"
tower = { version = "0.4", features = ["util"] }


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
